--- a/templates/header.html
+++ b/templates/header.html
@@ -37,6 +37,6 @@
     
 </div>
 <!-- modal -->
-<div ng-include='"templates/update.html"'></div>
+<!-- <div ng-include='"templates/update.html"'></div> -->
 <!-- <div ng-include='"templates/add.html"'></div> -->
-<div ng-include='"templates/user.html"'></div>
+<!-- <div ng-include='"templates/user.html"'></div> -->
