--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,6 +45,18 @@
     max-width: 1280px;
 }
 
+.material-datatables select{
+    width: 75px !important;
+    border: none !important;
+    -webkit-appearance: menulist !important;
+}
+
+.material-datatables input[type=search]{
+    border: 1px solid #E4E4E4 !important;
+    border-radius: 3px !important;
+    width: 16em;
+}
+
 thead {
     font-weight: 900;
     font-family: 'Times New Roman', Times, serif;
